# amplify-mcp-servers-examples

./: .gitignore  DEPLOYMENT_GUIDE.md  DISCLAIMERS_ADDED.txt  QUICKSTART.md  README.md  REPOSITORY_SUMMARY.txt  SECURITY.md
servers/data-transformation/: README.md  deploy-lambda-direct.sh  deploy-lambda-ecr.sh  lambda_handler.py  push-to-ecr.sh  pyproject.toml
servers/data-transformation/data_mcp_server/: __init__.py  data_manager.py  data_manager_full.py
servers/image-processing/: README.md  deploy-lambda-direct.sh  deploy.sh  lambda_handler.py  push-to-ecr.sh  pyproject.toml
servers/image-processing/image_mcp_server/: __init__.py  image_manager.py  server.py  server.py.corrupted  server_clean.py  server_template.py
servers/jupyter/: DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  LAMBDA_DEPLOYMENT.md  QUICKSTART.md  README.md  WHICH_DEPLOYMENT.md  deploy-lambda-direct.sh  deploy-lambda-ecr.sh  deploy-lambda-sudo.sh  deploy-lambda.sh  docker-compose.yml  final_fix.py  fix_execute.py  fix_execute2.py  fix_fstrings.py  fix_server_clean.py  fix_server_delete.py  fix_server_newlines.py  fix_server_response.py  fix_syntax.py  lambda_handler.py  local_backend.py  push-to-ecr.sh  pyproject.toml  restore_execute_code.py  serverless-ecr.yml  serverless-lambda.yml  update_kernel.py  update_lambda_handler.py
servers/jupyter/jupyter_mcp_server/: __init__.py  kernel_manager.py  s3_workspace.py  server.py
servers/nodejs-execution/: BUILD_AND_DEPLOY.sh  Dockerfile.lambda  README.md  TEST_SECURITY_FIX.sh  deploy-lambda-direct.sh  lambda_handler.py  push-to-ecr.sh  pyproject.toml
servers/nodejs-execution/nodejs_mcp_server/: __init__.py  execution_manager.py  server.py
