[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-mcp-server"
version = "0.1.0"
description = "MCP server for Jupyter notebook interaction"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.scripts]
jupyter-mcp-server = "jupyter_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_mcp_server"]
